# socktop

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
socktop/: Cargo.toml
socktop/src/: app.rs  lib.rs  main.rs  profiles.rs  retry.rs  types.rs
socktop/src/ui/: .modal.rs.backup  cpu.rs  disks.rs  header.rs  mod.rs  modal.rs  modal_connection.rs  modal_format.rs  modal_process.rs  modal_types.rs  processes.rs  theme.rs
socktop/tests/: modal_tests.rs  profiles.rs
socktop_agent/: Cargo.toml  README.md  build.rs
socktop_agent/src/: cache.rs  lib.rs  main.rs  metrics.rs  state.rs  types.rs  ws.rs
socktop_agent/tests/: cache_tests.rs  process_details.rs  tls_cert_creation.rs
socktop_connector/: Cargo.toml  LICENSE  README.md  build.rs
socktop_connector/examples/: wasm_example.rs
socktop_connector/src/: config.rs  connector.rs  connector_impl.rs  error.rs  lib.rs  types.rs  utils.rs
socktop_connector/src/networking/: connection.rs  mod.rs  requests.rs
socktop_connector/src/wasm/: connection.rs  mod.rs  requests.rs
socktop_connector/tests/: integration_test.rs
socktop_wasm_test/: .gitignore  Cargo.toml  README.md  index.html  test.html
socktop_wasm_test/src/: lib.rs
zellij_socktop_plugin/: Cargo.toml  README.md  plugin.yaml
zellij_socktop_plugin/src/: lib.rs
