[package]
name = "socktop_wasm_test"
version = "0.1.0"
edition = "2021"

# Make this a standalone package, not part of the parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use WASM features for WebSocket connectivity (published version)
socktop_connector = { version = "0.1.5", default-features = false, features = ["wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent", 
  "CloseEvent",
  "BinaryType",
]

# Enable JS feature for WASM random number generation
[dependencies.getrandom] 
version = "0.2"
features = ["js"]
