[package]
name = "zellij_socktop_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile = "0.40.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socktop_connector = { version = "0.1.5", default-features = false, features = ["wasm"] }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std", "wasmbind"]
